# portifolio-beckend

./: .gitignore  anotacoes.txt  estrutura.py  estrutura_projeto.txt  main.py  pyproject.toml  requirements.txt
agent/: prompt.md
core/: agent.py  memory.py  rag.py
rag/igor/: ingest_rag.py
rag/igor/data/: curriculo_igor.md  faq_recrutadores.csv
tools/: __init__.py  basic_tools.py  web_search.py
tools/pdf_generator/: __init__.py  pdf_generator.py
